--- a/0-Intro.ipynb
+++ b/0-Intro.ipynb
@@ -26,7 +26,7 @@
     "## Primeiros Passos\n",
     "\n",
     "- Use `Enter` e `Esc` para entrar e sair do modo edição de celulas (borda verde)\n",
-    "- Para executar qualquer célula use `Ctrl+Enter` ou `Shift-Enter`\n",
+    "- Para executar qualquer célula use `Ctrl + Enter` ou `Shift + Enter`\n",
     "- Em modo de comando (borda azul):\n",
     "  - `a`: cria célula acima \n",
     "  - `b`: cria célula abaixo\n",
@@ -178,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import this"
