--- a/2-Transmissao.ipynb
+++ b/2-Transmissao.ipynb
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos analisar os dados em tremos de médias e desvios padrão:"
+    "Podemos analisar os dados em termos de médias e desvios padrão:"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "source": [
     "Há mais de uma maneira de buscar a distância entre máximos.\n",
     "Simplesmente olhar para o gráfico é uma delas, mas imagine que temos centenas ou milhares desses conjuntos de dados.\n",
-    "Nesse caso é melhor buscarmos um método mais automático de anlise.\n",
+    "Nesse caso é melhor buscarmos um método mais automático de análise.\n",
     "\n",
     "Devido ao ruído, usar simplesmente `numpy.max` pode resultar em baixa precisão.\n",
     "\n",
