--- a/0-Intro.ipynb
+++ b/0-Intro.ipynb
@@ -8,11 +8,16 @@
     "\n",
     "*Lucas H. Gabrielli*, [lucashg@fee.unicamp.br](mailto:lucashg@fee.unicamp.br) — Ago 2017\n",
     "\n",
-    "**Objetivo**: transformar\n",
+    "![IEEE Photonics Society – UNICAMP Chapter](intro/logo_chapter.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objetivo\n",
     "\n",
     "![Foto da tela do instrumento](intro/foto.jpg)\n",
-    "\n",
-    "em\n",
     "\n",
     "![Gráfico de boa qualidade](intro/figura.png)\n",
     "\n",
