--- a/3-Casador.ipynb
+++ b/3-Casador.ipynb
@@ -11,7 +11,7 @@
     "Nesse caso os dados foram salvos direto do analisador de espectro.\n",
     "Apesar do número de pontos muito maior, a forma de analisar é a mesma.\n",
     "\n",
-    "**Objetivo**: apresentar os dados coletados de forma informativa."
+    "*Objetivo*: apresentar os dados coletados de forma informativa."
    ]
   },
   {
@@ -41,8 +41,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -59,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = numpy.loadtxt('casador/50ohm.csv', delimiter=',', skiprows=44)\n",
@@ -78,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -111,9 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "short = numpy.loadtxt('casador/short.csv', delimiter=',',\n",
@@ -124,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "reference = short.mean()\n",
@@ -145,9 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -179,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = numpy.arange(23, 28)\n",
@@ -215,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = numpy.argmin(numpy.abs(freq - 120))\n",
@@ -227,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -240,9 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -265,9 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -282,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -308,9 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "refl[:, 0, 0].min()"
@@ -319,9 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -343,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "refl.argmin(axis=0)"
@@ -354,9 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "refl[841, 0, 0] == refl[:, 0, 0].min()"
@@ -365,9 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "freq[refl.argmin(axis=0)]"
@@ -376,9 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1)\n",
@@ -422,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f, l, d = numpy.mgrid[100:140:81j, 16:21:121j, 23:28:121j]\n",
