Revision of variable names, add function basics

--- a/1-Propagacao.ipynb
+++ b/1-Propagacao.ipynb
@@ -49,17 +49,17 @@
    "outputs": [],
    "source": [
     "# Waveguide lengths (cm)\n",
-    "x = [0.5, 0.5, 0.5, 1.0, 1.0, 1.0, 2.0, 2.0, 2.0]\n",
+    "x_exp = [0.5, 0.5, 0.5, 1.0, 1.0, 1.0, 2.0, 2.0, 2.0]\n",
     "\n",
     "# Single-mode waveguide insertion loss (dB)\n",
-    "y1 = [13.31181, 13.1782, 14.01734,\n",
-    "      16.2383, 16.3154, 16.068,\n",
-    "      19.9276, 20.0151, 21.6095]\n",
+    "y_sm = [13.312, 13.178, 14.017,\n",
+    "        16.238, 16.315, 16.068,\n",
+    "        19.928, 20.015, 21.610]\n",
     "\n",
     "# Multimode waveguide insertion loss (dB)\n",
-    "y2 = [23.64875, 22.815, 23.9887,\n",
-    "      27.25228, 26.7654, 26.5463,\n",
-    "      33.33211, 32.786, 34.0234]"
+    "y_mm = [23.649, 22.815, 23.989,\n",
+    "        27.252, 26.765, 26.546,\n",
+    "        33.332, 32.786, 34.023]"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "source": [
     "fig, ax = pyplot.subplots(1, 1) # rows × cols\n",
     "\n",
-    "ax.plot(x, y1)"
+    "ax.plot(x_exp, y_sm)"
    ]
   },
   {
@@ -102,10 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = pyplot.subplots(1, 1) # rows × cols, size in inches\n",
+    "fig, ax = pyplot.subplots(1, 1, figsize=(4.5, 4)) # rows × cols, size in inches\n",
     "\n",
-    "ax.plot(x, y1, 'o', label='Single-mode')\n",
-    "ax.plot(x, y2, 's', label='Multimode')\n",
+    "ax.plot(x_exp, y_sm, 'o', label='Single-mode')\n",
+    "ax.plot(x_exp, y_mm, 's', label='Multimode')\n",
     "\n",
     "ax.legend()\n",
     "\n",
@@ -141,9 +141,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1, v1 = numpy.polyfit(x, y1, 1, cov=True)\n",
-    "print('Coefficients:', c1)\n",
-    "print('\\nCovariance matrix:\\n', v1)"
+    "c_sm, v_sm = numpy.polyfit(x_exp, y_sm, 1, cov=True)\n",
+    "print('Coefficients:', c_sm)\n",
+    "print('\\nCovariance matrix:\\n', v_sm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 1.5\n",
+    "print(c_sm[0] * x + c_sm[1])"
    ]
   },
   {
@@ -152,9 +162,33 @@
    "source": [
     "Com os coeficientes da reta, podemos plotá-la no gráfico junto dos dados originais.\n",
     "Para isso é preciso criar um vetor de valores para as distâncias e calcular as perdas atarvés da equação da reta.\n",
-    "Por ser uma reta, dois pontos são suficientes.\n",
+    "Por ser uma reta, dois pontos são suficientes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_fit = [0.0, 2.0]\n",
+    "y_sm_fit = []\n",
+    "for x in x_fit:\n",
+    "    y_sm_fit.append(c_sm[0] * x + c_sm[1])\n",
+    "y_sm_fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Não seria mais fácil escrever:\n",
     "\n",
-    "O vetor `x` é criado usando o módulo numpy, que permite operações com vetores e matrizes.\n",
+    "```python\n",
+    "y_sm_fit = c_sm[0] * x_fit + c_sm[1]\n",
+    "```\n",
+    "\n",
+    "Isso é possível se o vetor `x_fit` for criado usando o módulo numpy, que permite operações com vetores e matrizes.\n",
     "Python não permite operações vetoriais diretamente porque suas listas podem conter tipos quaisquer de variáveis simultaneamente (inclusive outras listas):\n",
     "\n",
     "```python\n",
@@ -169,16 +203,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_x = numpy.array([0, 2.0])\n",
-    "fit_y1 = c1[0] * fit_x + c1[1]\n",
+    "x_fit = numpy.array([0, 2.0])\n",
+    "y_sm_fit = c_sm[0] * x_fit + c_sm[1]\n",
     "\n",
     "fig, ax = pyplot.subplots(1, 1)\n",
     "\n",
-    "ax.plot(x, y1, 'o', label='Single-mode data')\n",
-    "ax.plot(fit_x, fit_y1, label='y = {0[0]:.1f}x + {0[1]:.1f}'.format(c1))\n",
+    "ax.plot(x_exp, y_sm, 'o', label='Single-mode data')\n",
+    "ax.plot(x_fit, y_sm_fit, label='y = {0[0]:.1f}x + {0[1]:.1f}'.format(c_sm))\n",
     "\n",
-    "print('Propagation loss: ({:.1f} ± {:.1f}) dB/cm'.format(c1[0], v1[0, 0]**0.5))\n",
-    "print('Coupling loss: ({:.1f} ± {:.1f}) dB'.format(c1[1], v1[1, 1]**0.5))"
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "\n",
+    "print('Propagation loss: ({:.1f} ± {:.1f}) dB/cm'.format(c_sm[0], v_sm[0, 0]**0.5))\n",
+    "print('Coupling loss: ({:.1f} ± {:.1f}) dB'.format(c_sm[1], v_sm[1, 1]**0.5))"
    ]
   },
   {
@@ -203,7 +240,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "c_mm, v_mm = ..."
+   ]
   },
   {
    "cell_type": "markdown",
