--- a/2-Transmissao.ipynb
+++ b/2-Transmissao.ipynb
@@ -42,6 +42,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -206,7 +207,7 @@
    "source": [
     "y = numpy.mean(v, axis=1)\n",
     "e = numpy.std(v, axis=1)\n",
-    "e.shape"
+    "y.shape"
    ]
   },
   {
@@ -350,7 +351,7 @@
     "def model(x, k, a, x0, y0):\n",
     "    return y0 + a * numpy.sin(2*numpy.pi*k*(x - x0))\n",
     "\n",
-    "model(0.25, 1, 1, 0, 0)"
+    "model(0.25, 0.1, 1, 0, 0)"
    ]
   },
   {
@@ -359,7 +360,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model(numpy.array([0, 0.25, 0.5, 0.75, 1]), 1, 1, 0, 0)"
+    "x_fit = numpy.array([0, 0.25, 0.5, 0.75, 1])\n",
+    "model(x_fit, 0.1, 1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = (0.1, 1, 0, 0)\n",
+    "model(x_fit, *args)"
    ]
   },
   {
@@ -370,14 +382,14 @@
    "source": [
     "init = (0.08, 0.2, 291, 0.75)\n",
     "\n",
-    "fit_x = numpy.linspace(x[0], x[-1], 201)\n",
+    "x_fit = numpy.linspace(x[0], x[-1], 201)\n",
     "\n",
-    "init_y = model(fit_x, *init)\n",
+    "y_init = model(x_fit, *init)\n",
     "\n",
     "fig, ax = pyplot.subplots(1, 1)\n",
     "\n",
     "ax.errorbar(x, y, e, capsize=3, ls='', marker='.')\n",
-    "ax.plot(fit_x, init_y)"
+    "ax.plot(x_fit, y_init)"
    ]
   },
   {
@@ -388,7 +400,8 @@
    "source": [
     "opt, cov = curve_fit(model, x, y, init)\n",
     "\n",
-    "opt, numpy.sqrt(numpy.diag(cov))"
+    "print(opt)\n",
+    "print(numpy.sqrt(numpy.diag(cov)))"
    ]
   },
   {
@@ -397,12 +410,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_y = model(fit_x, *opt)\n",
+    "y_fit = model(x_fit, *opt)\n",
     "\n",
     "fig, ax = pyplot.subplots(1, 1)\n",
     "\n",
     "ax.errorbar(x, y, e, capsize=3, ls='', marker='.')\n",
-    "ax.plot(fit_x, fit_y)\n",
+    "ax.plot(x_fit, y_fit)\n",
     "\n",
     "ax.set_xlabel('Distance (mm)')\n",
     "ax.set_ylabel('Signal (normalized)')\n",
@@ -444,7 +457,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def model2(x, f, a, x0, y0):\n",
+    "    #..."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -459,16 +475,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model2(x, f, a, e0, g, p0, p1):\n",
+    "def model3(x, f, a, e0, g, p0, p1):\n",
     "    phi = (a + 6.67e-3j * numpy.pi * f) * (x - 280)\n",
     "    y = e0 * (numpy.exp(1j * p0 - phi) + g * numpy.exp(1j * p1 + phi))\n",
     "    return numpy.abs(y)**2\n",
     "\n",
-    "init2 = (10, 0.001, 0.9, 0.1, 0, 0)\n",
-    "opt2, cov2 = curve_fit(model2, x, y, init2)\n",
+    "init = (10, 0.001, 0.9, 0.1, 0, 0)\n",
+    "opt, cov = curve_fit(model3, x, y, init)\n",
     "\n",
-    "init_y2 = model2(fit_x, *init2)\n",
-    "fit_y2 = model2(fit_x, *opt2)\n",
+    "y_init = model3(x_fit, *init2)\n",
+    "y_fit = model3(x_fit, *opt2)\n",
     "\n",
     "fig, ax = pyplot.subplots(2, 1, figsize=(6, 6))\n",
     "\n",
@@ -478,10 +494,10 @@
     "    a.grid()\n",
     "ax[1].set_xlabel('Distance (mm)')\n",
     "\n",
-    "ax[0].plot(fit_x, init_y2)\n",
-    "ax[1].plot(fit_x, fit_y2)\n",
+    "ax[0].plot(x_fit, y_init)\n",
+    "ax[1].plot(x_fit, y_fit)\n",
     "\n",
-    "print('Frequency: ({:.2f} ± {:.2f}) GHz'.format(opt2[0], cov2[0, 0]**0.5))"
+    "print('Frequency: ({:.2f} ± {:.2f}) GHz'.format(opt[0], cov[0, 0]**0.5))"
    ]
   }
  ],
