--- a/1-Propagacao.ipynb
+++ b/1-Propagacao.ipynb
@@ -81,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1) # rows × cols\n",
@@ -99,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = pyplot.subplots(1, 1, figsize=(4.5, 4)) # rows × cols, size in inches\n",
@@ -138,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "c_sm, v_sm = numpy.polyfit(x_exp, y_sm, 1, cov=True)\n",
@@ -149,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = 1.5\n",
@@ -168,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_fit = [0.0, 2.0]\n",
@@ -200,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_fit = numpy.array([0, 2.0])\n",
@@ -250,11 +262,11 @@
    "source": [
     "## Script\n",
     "\n",
-    "Não é necessário usar a infraestrutura do Jupyter Notebook, pode-se simplesmente usar um arquivo de texto simples com extensão py e executá-lo através do interpretador.\n",
+    "Não é necessário usar a infraestrutura do Jupyter Notebook, pode-se usar um arquivo de texto simples com extensão py e executá-lo através do interpretador.\n",
     "\n",
     "## Boas Práticas\n",
     "\n",
-    "Ao analisar e processar dados experimentais é mais importante arquivar os arquivos originais de dados e scripts de processamento que os resultados e figuras gerados."
+    "Ao analisar e processar dados experimentais é mais importante armazenar os arquivos originais de dados e scripts de processamento que os resultados e figuras gerados."
    ]
   }
  ],
