--- a/part2/1-Propagation.ipynb
+++ b/part2/1-Propagation.ipynb
@@ -4,20 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fotônica Integrada\n",
+    "# Integrated Photonics\n",
     "\n",
-    "Vamos analisar medidas de perdas em guias poliméricos em fotônica integrada.\n",
+    "**Objective:** characterize the propagation loss in polymeric optical waveguides.\n",
     "\n",
-    "Os guias foram fabricados em sala limpa por escrita direta a laser sobre bolachas de Si coberto por SiO₂.\n",
+    "The waveguides were fabricated in a cleanroom environment through direct laser writing on a Si wafer covered with a thick SiO₂ layer.\n",
     "\n",
-    "Os guias são retangulares, ambos com 600 nm de altura e larguras de 600 nm e 1.70 µm.\n",
+    "The waveguides have 600 nm in height, 600 nm of 1.70 µm in width (for single- and multi-mode types), and lenghts of 0.5, 1.0, and 2.0 cm.\n",
+    "Measurements for 3 samples of each width and length are available.\n",
     "\n",
-    "As medidas foram tomadas com um laser de comprimento de onda de 633 nm (vermelho) utilizando fibras ópticas suportadas por estágios de alinhamento micrométrico.\n",
+    "The measurements were taken with a red laser at a wavelength of 633 nm that was coupled into and out of the waveguides using optical fibers aligned to their end facets.\n",
     "\n",
-    "![Setup de medição](propagacao/image1.jpg)\n",
-    "![Setup de medição](propagacao/image2.jpg)\n",
+    "![Setup de medição](propagation/image1.jpg)\n",
+    "![Setup de medição](propagation/image2.jpg)\n",
     "\n",
-    "**Referência**:\n",
+    "**Reference**:\n",
     "\n",
     "J. C. Ramirez, J. N. Schianti, M. G. Almeida, A. Pavani, R. R. Panepucci, H. E. Hernandez-Figueroa, L. H. Gabrielli.\n",
     "Low-loss modified SU-8 waveguides by direct laser writing at 405 nm.\n",
