--- a/part2/1-Propagation.ipynb
+++ b/part2/1-Propagation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrated Photonics\n",
+    "# Light propagation in waveguides\n",
     "\n",
     "**Objective:** characterize the propagation loss in polymeric optical waveguides.\n",
     "\n",
@@ -67,8 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "É possível plotar usando diretamente funções do módulo `pyplot`, sem explicitar variáveis para figura (`fig`) e eixos (`ax`).\n",
-    "Essa interfaçe funcional é mais similar ao Matlab, principalmente se o módulo `pyplot` for importado diretamente (cuidado para não sobrescrever as funções importadas):\n",
+    "The `pyplot` module provides an interface very similar to Matlab:\n",
     "\n",
     "```python\n",
     "from matplotlib.pyplot import *\n",
@@ -76,14 +75,16 @@
     "plot(x, y1)\n",
     "```\n",
     "\n",
-    "No entanto, a interface orientada a objetos permite melhor organização do código, principalmente quando múltiplas figuras com subplots são criadas simultaneamente."
+    "However, an object oriented interface allows better code organization, in particular when multiple figures and axes are constructed simultaneously.\n",
+    "\n",
+    "This interface is mostly based on `Figure` and `AxisSubplot` instances created by the `subplots` function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -96,7 +97,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um gráfico apropriado para publicação deve ter um mínimo de elementos descritivos, como títulos para os eixos."
+    "Any publication-quality plot should include at least axis labels.\n",
+    "In this case a legend is important as well.\n",
+    "Finally, a grid is usefull to anyone trying to read the data."
    ]
   },
   {
@@ -112,10 +115,10 @@
     "ax.plot(x_exp, y_sm, 'o', label='Single-mode')\n",
     "ax.plot(x_exp, y_mm, 's', label='Multimode')\n",
     "\n",
-    "ax.legend()\n",
-    "\n",
     "ax.set_xlabel('Length (cm)')\n",
     "ax.set_ylabel('Insertion Loss (dB)')\n",
+    "\n",
+    "ax.legend()\n",
     "\n",
     "ax.grid()"
    ]
@@ -126,7 +129,7 @@
    "source": [
     "## Polynomial fit\n",
     "\n",
-    "*Objetivo*: ajustar uma reta a cada grupo de dados para separar perdas por propagação (dependente do comprimento do guia) e  por acoplamento (independente do comprimento)."
+    "Propagation and insertion losses for the experiments can be estimated by fitting a line to the measured data, since the former grows linearly with the wveguide length and the latter is independent from it."
    ]
   },
   {
@@ -169,9 +172,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com os coeficientes da reta, podemos plotá-la no gráfico junto dos dados originais.\n",
-    "Para isso é preciso criar um vetor de valores para as distâncias e calcular as perdas atarvés da equação da reta.\n",
-    "Por ser uma reta, dois pontos são suficientes."
+    "The best line can be plotted together with the data.\n",
+    "Because it is a straight line, only the 2 extremes of the line segment are required for plotting it.\n",
+    "With the line coefficients at hand, *y* values can be directly computed from selected *x* values."
    ]
   },
   {
@@ -193,15 +196,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Não seria mais fácil escrever:\n",
-    "\n",
+    "It would be much easier to write:\n",
     "```python\n",
     "y_sm_fit = c_sm[0] * x_fit + c_sm[1]\n",
     "```\n",
+    "and have the *y* values calculated element-wise from the RHS.\n",
     "\n",
-    "Isso é possível se o vetor `x_fit` for criado usando o módulo numpy, que permite operações com vetores e matrizes.\n",
-    "Python não permite operações vetoriais diretamente porque suas listas podem conter tipos quaisquer de variáveis simultaneamente (inclusive outras listas):\n",
+    "That is possible if the *x* vector is created with the `numpy` module, which provides operations on multi-dimensional vectors and matrices and tensors.\n",
     "\n",
+    "*Remember that python lists can hold any object, so nummerical operations are, in general, meaningless.*\n",
     "```python\n",
     "a = [1, 'wow', -5.3j, ['outra lista', 0], None]\n",
     "a + 1 = ???\n",
@@ -235,15 +238,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercício\n",
+    "## Exercise\n",
     "\n",
-    "Plote ambos os conjuntos de dados (guia monomodo e multimodo) com uma reta ajustada a cada conjunto.\n",
-    "Não se esqueça da legenda, títulos para os eixos e grade.\n",
+    "Plot both sets of data (single- and multi-mode waveguides) with one linear fit for each.\n",
+    "Don't forget to include legend, grid and axis labels.\n",
     "\n",
-    "### Bônus\n",
+    "### Bonus\n",
     "\n",
-    "- Use um estilo de linha diferente para uma das retas, facilitando sua identificação em impressões preto-e-branco\n",
-    "- Salve a figura num arquivo que possa ser inserido mais tarde num relatório"
+    "- Use a different line style for each linear fit (very helpfull for black and white prints).\n",
+    "- Save the figure to a file that could be latter included in a report."
    ]
   },
   {
@@ -255,19 +258,6 @@
    "outputs": [],
    "source": [
     "c_mm, v_mm = ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Script\n",
-    "\n",
-    "Não é necessário usar a infraestrutura do Jupyter Notebook, pode-se usar um arquivo de texto simples com extensão py e executá-lo através do interpretador.\n",
-    "\n",
-    "## Boas Práticas\n",
-    "\n",
-    "Ao analisar e processar dados experimentais é mais importante armazenar os arquivos originais de dados e scripts de processamento que os resultados e figuras gerados."
    ]
   }
  ],
