--- a/part2/3-Matching.ipynb
+++ b/part2/3-Matching.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Casador de Impedâncias\n",
+    "# RF matching network\n",
     "\n",
-    "Caracterizamos uma série de casadores de imepedância de toco simples para frequências ao redor de 125 MHz.\n",
+    "A series of single stub impedance matching networks were assembled using 50 Ω coaxial cables and characterized around 120 MHz.\n",
+    "The load was a termination with nominal value of 150 Ω, but, as assembled, it was closer to (134 - j40) Ω.\n",
     "\n",
-    "Nesse caso os dados foram salvos direto do analisador de espectro.\n",
-    "Apesar do número de pontos muito maior, a forma de analisar é a mesma.\n",
+    "All data from the spectrum analyzer are stored in CSV files.\n",
     "\n",
-    "*Objetivo*: apresentar os dados coletados de forma informativa."
+    "**Objective**: explore, filter and present the data."
    ]
   },
   {
@@ -31,29 +31,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "O analisador de espectro salva toda sua configuração como cabeçalho do arquivo, por isso é importante armazenar esses dados caso deseje-se reproduzir os experimentos."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "%cat casador/50ohm.csv"
+    "%cat matching/50ohm.csv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Novamente usamos `numpy.loadtxt`, mas agora o cabeçalho tem 44 linhas."
+    "The header information (44 lines) must be skipped by `numpy.loadtxt`:"
    ]
   },
   {
@@ -62,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = numpy.loadtxt('casador/50ohm.csv', delimiter=',', skiprows=44)\n",
+    "data = numpy.loadtxt('matching/50ohm.csv', delimiter=',', skiprows=44)\n",
     "data.shape"
    ]
   },
@@ -70,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes de medir os casadores, verificamos as medidas sobre uma carga casada (50 Ω), a que desejamos casar (150 Ω nominais), um aberto e um curto."
+    "Before measuring the matching networks, the bridge setup was characterized with a matched impedance (50 Ω), the load (150 Ω), a short, and an open terminations."
    ]
   },
   {
@@ -82,7 +74,7 @@
     "fig, ax = pyplot.subplots(1, 1)\n",
     "\n",
     "for fname in ['50ohm', '150ohm', 'open', 'short']:\n",
-    "    data = numpy.loadtxt('casador/{}.csv'.format(fname),\n",
+    "    data = numpy.loadtxt('matching/{}.csv'.format(fname),\n",
     "                         delimiter=',', skiprows=44)\n",
     "    ax.plot(data[:, 0] * 1e-6, data[:, 1])\n",
     "\n",
@@ -96,12 +88,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verificamos que o curto e o aberto apresentam aproximadamente o mesmo sinal, como esperado pela teoria.\n",
-    "Sabemos que esses valores deveriam representar reflexão total, portanto podemos usá-los como referência para descontar as perdas nos cabos e isoladores utilizados na montagem experimental.\n",
+    "Open and short terminations present relatively similar signal levels, as expected.\n",
+    "Because they represent total reflection at the load, they can be used as reference to  eliminate the effects of losses in the cables, connections and the bridge used in the measurement setup.\n",
     "\n",
-    "Como as curvas são bastante planas, usaremos o valor médio de uma delas como referência.\n",
-    "\n",
-    "Alternativamente poderíamos usar o vetor completo, com um valor de referência para cada frequência, mas neste caso o resultado seria muito similar."
+    "Because both curves are relatively constant, the average value is sufficient as a general reference value for all frequencies."
    ]
   },
   {
@@ -110,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "short = numpy.loadtxt('casador/short.csv', delimiter=',',\n",
+    "short = numpy.loadtxt('matching/short.csv', delimiter=',',\n",
     "                      skiprows=44, usecols=1)\n",
     "short.shape"
    ]
@@ -129,9 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usamos 2 *loops* para carregar os sinais medidos para cada configuração de casador.\n",
-    "\n",
-    "Os valores de `d` e `l` nos nomes dos arquivos indicam os comprimentos (em centímetros) dos cabos coaxiais utilizados como separador da carga e toco em curto, respectivamente."
+    "The data file names include the lenghts (in centimeters) of the load (`d`) and short (`l`) stubs in each configuration."
    ]
   },
   {
@@ -144,7 +132,7 @@
     "\n",
     "for d in range(23, 28):\n",
     "    for l in range(16, 21):\n",
-    "        data = numpy.loadtxt('casador/d{}-l{}.csv'.format(d, l),\n",
+    "        data = numpy.loadtxt('matching/d{}-l{}.csv'.format(d, l),\n",
     "                             delimiter=',', skiprows=44)\n",
     "        ax.plot(data[:, 0] * 1e-6, data[:, 1] - reference,\n",
     "                label='d = {} cm, l = {} cm'.format(d, l))\n",
@@ -159,11 +147,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mesmo que a legenda não fosse mostrada, o gráfico está muito poluído e não permite que se conclua nada sobre o experimento.\n",
+    "Even without the legend, this plot is heavily polluted.\n",
+    "It is difficult to extract any usefull information from it.\n",
     "\n",
-    "Considerando que temos 3 variáveis independentes (`d`, `l` e a frequência), precisamos considerar o que buscamos medir para determinar a melhor maneira de visualizar os dados.\n",
+    "Considering that the data is 3-dimensional (frequency, `d` and `l` are independent variables), there are better ways to filter out and display usefull information from the measurements.\n",
     "\n",
-    "Primeiramente carregamos os dados de forma a evidenciar os 3 eixos de variveis independentes (isso só funciona porque todos os dados apresentam os mesmos valores de amostragem em frequência)."
+    "Since all measurements contain were taken at the same frequency values, it can be stored in a 3-d array indexed by (frequency, `l` value, `d` value)."
    ]
   },
   {
@@ -176,16 +165,18 @@
     "l = numpy.arange(16, 21)\n",
     "for dd in d:\n",
     "    for ll in l:\n",
-    "        if dd == 23 and ll == 16:\n",
-    "            data = numpy.loadtxt('casador/d{}-l{}.csv'.format(dd, ll),\n",
+    "        # In the first iteration the freq array is extracted and the 3-d array initialized\n",
+    "        if dd == d[0] and ll == l[0]:\n",
+    "            data = numpy.loadtxt('matching/d{}-l{}.csv'.format(dd, ll),\n",
     "                             delimiter=',', skiprows=44)\n",
     "            freq = data[:, 0] * 1e-6\n",
-    "            refl = numpy.zeros((len(freq), 5, 5)) - reference\n",
-    "            refl[:, 0, 0] += data[:, 1]\n",
+    "            refl = numpy.empty((len(freq), 5, 5))\n",
+    "            refl[:, 0, 0] = data[:, 1]\n",
     "        else:\n",
-    "            refl[:, ll - 16, dd - 23] += numpy.loadtxt(\n",
-    "                'casador/d{}-l{}.csv'.format(dd, ll),\n",
+    "            refl[:, ll - 16, dd - 23] = numpy.loadtxt(\n",
+    "                'matching/d{}-l{}.csv'.format(dd, ll),\n",
     "                delimiter=',', skiprows=44, usecols=1)\n",
+    "refl -= reference\n",
     "\n",
     "print(freq.shape, l.shape, d.shape, refl.shape)"
    ]
@@ -194,10 +185,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos inicialmente analisar como os casadores se comportam se nosso objetivo fosse melhorar o casamento em 120 MHz.\n",
+    "The matching performance can be chcecked at the target frequency of 120 MHz.\n",
     "\n",
-    "Faremos um corte nos dado no eixo da frequência.\n",
-    "Para tanto precisamos determinar o índice da frequência desejada (ou o mais próximo possível)."
+    "The data is cut accross the frequency axis at the closest index (`freq[i]`) to 120 MHz."
    ]
   },
   {
@@ -231,6 +221,7 @@
     "\n",
     "cax = ax.imshow(refl[i, :, :], origin='lower', cmap='magma',\n",
     "                extent=(d[0]-0.5, d[-1]+0.5, l[0]-0.5, l[-1]+0.5))\n",
+    "\n",
     "pyplot.colorbar(cax, label='Reflection (dB)')\n",
     "\n",
     "ax.set_xlabel('d (cm)')\n",
@@ -241,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uma alternativa ainda mais quantitativa é usar contornos, mas cuidado com artefatos."
+    "Alternatively, contours can be used when they do not introduce artifacts."
    ]
   },
   {
@@ -278,9 +269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "E se buscássemos o mínimo de reflexão para cada configuração de casador sem nos importar com a sua frequência central?\n",
+    "The data also shows the miminal reflection for each configuration across frequencies.\n",
     "\n",
-    "Por exemplo, para o casado com d = 23 cm e l = 16 cm, obteríamos:"
+    "For example, for `d` = 23 cm and `l` = 16 cm, the minimum is:"
    ]
   },
   {
@@ -311,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por fim, queremos agora saber em que freqências cada um dos mínimos ocorre."
+    "At which frequencies do the minima occur?"
    ]
   },
   {
@@ -360,13 +351,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercício\n",
+    "## Exercise\n",
     "\n",
-    "Sobreponha os gráficos de mínimo de reflexão e frequência onde ocorre o mínimo de forma a apresentar ambas as informções simultaneamente.\n",
+    "Draw the plots of minimal reflection and frequency of minimal reflection for each network in a single `AxesSubplot` in such a way that both are presented to the reader.\n",
     "\n",
-    "### Bônus\n",
+    "### Bonus\n",
     "\n",
-    "Formate o gráfico de modo a possibilitar a mesma compreensão caso ele seja impresso em preto-e-branco."
+    "Format the plot so that it can be printed in black and white without loss of information."
    ]
   },
   {
@@ -382,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curiosidade: Modelo Teórico"
+    "## Theoretical model"
    ]
   },
   {
